--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 Flask==0.10.1
 Flask-MySQL==1.3
+Flask-SQLAlchemy==2.0
 Jinja2==2.8
 MarkupSafe==0.23
+SQLAlchemy==1.0.8
 Werkzeug==0.10.4
 argparse==1.2.1
 gunicorn==19.3.0
 itsdangerous==0.24
+psycopg2==2.6.1
 pyjade==3.1.0
 six==1.10.0
 wsgiref==0.1.2
