--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 Flask==0.10.1
-Flask-MySQL==1.3
-Flask-SQLAlchemy==2.0
+Flask-Bcrypt==0.7.1
+Flask-SQLAlchemy==2.1
 Jinja2==2.8
 MarkupSafe==0.23
-SQLAlchemy==1.0.8
+SQLAlchemy==1.0.9
 Werkzeug==0.10.4
 argparse==1.2.1
-gunicorn==19.3.0
+bcrypt==2.0.0
+cffi==1.3.0
 itsdangerous==0.24
 psycopg2==2.6.1
+pycparser==2.14
 pyjade==3.1.0
 six==1.10.0
 wsgiref==0.1.2
