--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Werkzeug==0.10.4
 argparse==1.2.1
 bcrypt==2.0.0
 cffi==1.3.0
-eventlet==0.17.4
+gevent==1.0.2
 greenlet==0.4.9
 gunicorn==19.4.1
 itsdangerous==0.24
