--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ argparse==1.2.1
 bcrypt==2.0.0
 cffi==1.3.0
 gevent==1.0.2
+gevent-socketio==0.3.6
+gevent-websocket==0.9.5
 greenlet==0.4.9
 gunicorn==19.4.1
 itsdangerous==0.24
